test/input/invalid/switch.js
switch (0) {
  default:
  default:
}
